add name on staging docker compose

--- a/readme
+++ b/readme
@@ -3,4 +3,4 @@ commande pour lancer les container: docker - compose up
  
 Acces a l'intercae graphique playwright :  npx playwright show-report
 
-test
+test 23
